--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,18 @@
 {
 	"compilerOptions": {
+		"baseUrl": "./",
+		"outDir": "dist",
+		"paths": {
+			// only intended to enable an esm import of serialize-error in .ts files
+			"*": ["node_modules/*/index"]
+		},
 		"target": "ES2022",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 
 		"strict": true,
 		"skipLibCheck": true
-	}
+	},
+
+	"exclude": ["**/*.test.ts"]
 }
