--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-json-err",
   "description": "Express error handlers for JSON APIs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "contributors": [
     "Jonathan Ong <me@jongleberry.com> (https://jongleberry.com)",
     "Tony Natelli <tony@natel.li> (https://suspended.systems)"
@@ -37,6 +37,6 @@
     "json"
   ],
   "files": [
-    "src/jsonError.ts"
+    "dist"
   ]
 }
